force-app/main/default/objects/OpportunityLineItem/fields/Q__c.field-meta.xml
<CustomField>
    <fullName>Q__c</fullName>
    <label>Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>