force-app/main/default/objects/OpportunityLineItem/fields/QuoteNo__c.field-meta.xml
<CustomField>
    <fullName>QuoteNo__c</fullName>
    <label>見積No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>