force-app/main/default/objects/OpportunityLineItem/fields/Rieki__c.field-meta.xml
<CustomField>
    <fullName>Rieki__c</fullName>
    <description>CAS用項目</description>
    <label>利益</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>