force-app/main/default/objects/OpportunityLineItem/fields/Rieki_M__c.field-meta.xml
<CustomField>
    <fullName>Rieki_M__c</fullName>
    <description>CAS用項目</description>
    <formula>ROUND( Rieki__c / 1000000,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利益（M\）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>