force-app/main/default/objects/OpportunityLineItem/fields/SA_NewestSalesQuantity__c.field-meta.xml
<CustomField>
    <fullName>SA_NewestSalesQuantity__c</fullName>
    <label>最新の売上数量</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>