force-app/main/default/objects/OpportunityLineItem/fields/SA_SoldQuantity__c.field-meta.xml
<CustomField>
    <fullName>SA_SoldQuantity__c</fullName>
    <label>売上済数量</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>