force-app/main/default/objects/OpportunityLineItem/fields/SA_UnsoldQuantity__c.field-meta.xml
<CustomField>
    <fullName>SA_UnsoldQuantity__c</fullName>
    <label>売上残数</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>