force-app/main/default/objects/OpportunityLineItem/fields/Saiteibaika__c.field-meta.xml
<CustomField>
    <fullName>Saiteibaika__c</fullName>
    <label>最低売価(単価)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>