force-app/main/default/objects/OpportunityLineItem/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <label>販売価格（作業用）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>