force-app/main/default/objects/OpportunityLineItem/fields/SalesPriceTotal__c.field-meta.xml
<CustomField>
    <fullName>SalesPriceTotal__c</fullName>
    <formula>UnitPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>