force-app/main/default/objects/OpportunityLineItem/fields/SalesYoteiDate__c.field-meta.xml
<CustomField>
    <fullName>SalesYoteiDate__c</fullName>
    <label>売上予定月</label>
    <length>10</length>
    <type>Text</type>
</CustomField>