force-app/main/default/objects/OpportunityLineItem/fields/SAWO_BudgetCheck__c.field-meta.xml
<CustomField>
    <fullName>SAWO_BudgetCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>予算化する商品</description>
    <label>予算チェックボックス</label>
    <type>Checkbox</type>
</CustomField>