force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CAT__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CAT__c</fullName>
    <description>装置情報</description>
    <label>CAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>