force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CEID1__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CEID1__c</fullName>
    <description>装置情報１</description>
    <label>CEID1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>