force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CEID2__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CEID2__c</fullName>
    <description>装置情報2</description>
    <label>CEID2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>