force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CommonMatter2__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CommonMatter2__c</fullName>
    <description>工場への伝達事項</description>
    <label>共通事項2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>