force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CompetitionCategory__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CompetitionCategory__c</fullName>
    <description>商談での競合メーカーのカテゴリ</description>
    <label>競合カテゴリー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>