force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Competitor__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Competitor__c</fullName>
    <description>商談での競合メーカーの名称</description>
    <label>競合メーカー名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>