force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Constitution__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Constitution__c</fullName>
    <description>商品の構成を設定</description>
    <formula>PricebookEntry.Product2.SAWO_Constitution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>構成</label>
    <type>Text</type>
</CustomField>