force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Currency__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Currency__c</fullName>
    <description>取引先マスタの項目値</description>
    <label>通貨</label>
    <length>3</length>
    <type>Text</type>
</CustomField>