force-app/main/default/objects/OpportunityLineItem/fields/SAWO_CustomerPONumber__c.field-meta.xml
<CustomField>
    <fullName>SAWO_CustomerPONumber__c</fullName>
    <label>顧客注文番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>