force-app/main/default/objects/OpportunityLineItem/fields/SAWO_DeliveryOrder__c.field-meta.xml
<CustomField>
    <fullName>SAWO_DeliveryOrder__c</fullName>
    <description>S4連携用項目</description>
    <label>出荷指示書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>