force-app/main/default/objects/OpportunityLineItem/fields/SAWO_DeliveryTermsClassification__c.field-meta.xml
<CustomField>
    <fullName>SAWO_DeliveryTermsClassification__c</fullName>
    <description>試薬で必要な項目</description>
    <label>配送条件区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>