force-app/main/default/objects/OpportunityLineItem/fields/SAWO_DetailCategory_MTE__c.field-meta.xml
<CustomField>
    <fullName>SAWO_DetailCategory_MTE__c</fullName>
    <description>S/4の明細カテゴリ</description>
    <label>Item Category (MTE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB1</fullName>
                <label>CB1:Drop ship w Not.</label>
            </value>
            <value>
                <fullName>CB2</fullName>
                <label>CB:2:Drop ship w/out Not.</label>
            </value>
            <value>
                <fullName>TAN</fullName>
                <default>true</default>
                <label>TAN:Distribution</label>
            </value>
            <value>
                <fullName>DB1</fullName>
                <label>DB1:Milst請求Pl+3Pw/ASN</label>
            </value>
            <value>
                <fullName>DB2</fullName>
                <label>DB2:Milst請求Pl+3Pw/oASN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>