force-app/main/default/objects/OpportunityLineItem/fields/SAWO_DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_DiscountPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>値引金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>