force-app/main/default/objects/OpportunityLineItem/fields/SAWO_EARNecessity__c.field-meta.xml
<CustomField>
    <fullName>SAWO_EARNecessity__c</fullName>
    <description>輸管項目</description>
    <label>EAR要否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>