force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ELClassification__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ELClassification__c</fullName>
    <description>輸管項目</description>
    <label>EL区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>