force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ExchangeReservesRate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ExchangeReservesRate__c</fullName>
    <description>取引したい為替レート</description>
    <label>為替予約レート</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>