force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ExpirationDate__c</fullName>
    <description>試薬で必要な項目</description>
    <label>有効期限</label>
    <length>255</length>
    <type>Text</type>
</CustomField>