force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ExportExaminationNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ExportExaminationNo__c</fullName>
    <description>輸出審査Noを入力する。</description>
    <label>参照コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>