force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ForecastCheck__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ForecastCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>顧客からforecastが出ているチェックボックス</description>
    <label>forecastチェックボックス</label>
    <type>Checkbox</type>
</CustomField>