force-app/main/default/objects/OpportunityLineItem/fields/SAWO_FrontProfit__c.field-meta.xml
<CustomField>
    <fullName>SAWO_FrontProfit__c</fullName>
    <description>合計金額-仕入価格</description>
    <label>利益（フロント）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>