force-app/main/default/objects/OpportunityLineItem/fields/SAWO_FrontProfitRate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_FrontProfitRate__c</fullName>
    <description>利益（フロント）/合計金額</description>
    <label>利益率（フロント）</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>