force-app/main/default/objects/OpportunityLineItem/fields/SAWO_FrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_FrontPurchasePrice__c</fullName>
    <description>フロント営業がHHTおよびサプライヤーから仕入れる価格</description>
    <label>フロント仕入価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>