force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Hangings__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Hangings__c</fullName>
    <description>商談に必要な諸掛</description>
    <label>諸掛</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>