force-app/main/default/objects/OpportunityLineItem/fields/SAWO_HHTProfit__c.field-meta.xml
<CustomField>
    <fullName>SAWO_HHTProfit__c</fullName>
    <description>総仕入価格-総TC</description>
    <label>利益（HHT）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>