force-app/main/default/objects/OpportunityLineItem/fields/SAWO_HHTProfitRate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_HHTProfitRate__c</fullName>
    <description>利益（HHT）/総TC</description>
    <label>利益率（HHT）</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>