force-app/main/default/objects/OpportunityLineItem/fields/SAWO_HHTWholesalePrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_HHTWholesalePrice__c</fullName>
    <description>HHTがフロント営業の会社に販売する価格</description>
    <label>仕切価格（HHT）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>