force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Invoice__c</fullName>
    <description>S4連携用項目</description>
    <label>請求書・Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>