force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ItemDivision__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ItemDivision__c</fullName>
    <label>製品区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>