force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ItemText__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ItemText__c</fullName>
    <description>品目名称</description>
    <label>明細テキスト</label>
    <length>40</length>
    <type>Text</type>
</CustomField>