force-app/main/default/objects/OpportunityLineItem/fields/SAWO_LineNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_LineNo__c</fullName>
    <description>行番号</description>
    <label>行番号</label>
    <length>3</length>
    <type>Text</type>
</CustomField>