force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ListPrice__c</fullName>
    <label>希望価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>