force-app/main/default/objects/OpportunityLineItem/fields/SAWO_LocalCorporationTC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_LocalCorporationTC__c</fullName>
    <description>フロント仕入価格+フロント販売管理費など</description>
    <label>現法TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>