force-app/main/default/objects/OpportunityLineItem/fields/SAWO_LotNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_LotNo__c</fullName>
    <description>試薬で必要な項目</description>
    <label>ロットNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>