force-app/main/default/objects/OpportunityLineItem/fields/SAWO_MAIN_ADST_EXCH__c.field-meta.xml
<CustomField>
    <fullName>SAWO_MAIN_ADST_EXCH__c</fullName>
    <description>本体なのか改造なのかを示す</description>
    <label>MAIN/ADST/EXCH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAIN</fullName>
            </value>
            <value>
                <fullName>ADST</fullName>
            </value>
            <value>
                <fullName>EXCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>