force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ManufactureType__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ManufactureType__c</fullName>
    <description>統合Webで必要な項目</description>
    <label>生産タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>