force-app/main/default/objects/OpportunityLineItem/fields/SAWO_MC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_MC__c</fullName>
    <label>ｘMC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>