force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Model__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Model__c</fullName>
    <description>製品の型式
商品の値を設定</description>
    <formula>TEXT(PricebookEntry.Product2.Katashiki__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>型式</label>
    <type>Text</type>
</CustomField>