force-app/main/default/objects/OpportunityLineItem/fields/SAWO_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>SAWO_OpportunityType__c</fullName>
    <description>新設案件or増設案件or更新案件を見分けるための項目</description>
    <label>新設/増設/更新</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新設</fullName>
            </value>
            <value>
                <fullName>増設</fullName>
            </value>
            <value>
                <fullName>更新</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>