force-app/main/default/objects/OpportunityLineItem/fields/SAWO_PartitionPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_PartitionPrice__c</fullName>
    <label>仕切値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>