force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Parts_No__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Parts_No__c</fullName>
    <label>P/N</label>
    <length>40</length>
    <type>Text</type>
</CustomField>