force-app/main/default/objects/OpportunityLineItem/fields/SAWO_PartsNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_PartsNo__c</fullName>
    <description>パーツナンバー
商品から取得</description>
    <formula>PricebookEntry.Product2.PartsNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P/N</label>
    <type>Text</type>
</CustomField>