force-app/main/default/objects/OpportunityLineItem/fields/SAWO_PBE_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SAWO_PBE_IsActive__c</fullName>
    <description>価格表エントリの有効項目を参照</description>
    <formula>PricebookEntry.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>