force-app/main/default/objects/OpportunityLineItem/fields/SAWO_PBEIsactive__c.field-meta.xml
<CustomField>
    <fullName>SAWO_PBEIsactive__c</fullName>
    <formula>PricebookEntry.IsActive</formula>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>