force-app/main/default/objects/OpportunityLineItem/fields/SAWO_PlantCode_MTE__c.field-meta.xml
<CustomField>
    <fullName>SAWO_PlantCode_MTE__c</fullName>
    <description>S4連携用項目</description>
    <label>プラント (MTE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>