force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Price__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Price__c</fullName>
    <description>合計金額＋消費税</description>
    <label>金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>