force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductAbbreviation__c</fullName>
    <description>試薬で必要な項目</description>
    <label>商品略称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>