force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductCode__c</fullName>
    <description>商品の商品コードを設定
商品検索画面から初期値が設定される。
自由入力製品の場合入力可能</description>
    <label>商品コード</label>
    <length>18</length>
    <type>Text</type>
</CustomField>