force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductFamily__c</fullName>
    <description>製品群</description>
    <label>製品群</label>
    <length>255</length>
    <type>Text</type>
</CustomField>