force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductId__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductId__c</fullName>
    <description>紐づいている商品のID</description>
    <label>親ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>