force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductName__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductName__c</fullName>
    <label>名称(一括編集)</label>
    <length>62</length>
    <type>Text</type>
</CustomField>