force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProductType__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProductType__c</fullName>
    <description>本体 or 周辺機器</description>
    <label>MT/PK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>