force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProfitCenter__c</fullName>
    <label>利益センタ(STE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>