force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ProfitCenter_MTE__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ProfitCenter_MTE__c</fullName>
    <formula>Opportunity.SAWO_ProfitCenter_MTE__c</formula>
    <label>利益センタ(MTE)</label>
    <type>Text</type>
</CustomField>