force-app/main/default/objects/OpportunityLineItem/fields/SAWO_QuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>SAWO_QuantityUnit__c</fullName>
    <description>S4連携項目</description>
    <label>基本数量単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT</fullName>
                <label>MT:後で修正</label>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>