force-app/main/default/objects/OpportunityLineItem/fields/SAWO_QuoteCopy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_QuoteCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>オプションの種類毎に作成する場合、初版をコピーし利用するためのチェックボックス</description>
    <label>見積コピー</label>
    <type>Checkbox</type>
</CustomField>