force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Rate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Rate__c</fullName>
    <description>DX要件にて作成</description>
    <label>為替レート</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>