force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Recording_Division__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Recording_Division__c</fullName>
    <description>DX要件で追加</description>
    <label>計上区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0</fullName>
                <default>true</default>
                <label>Z0:完納</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Z1:分納</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>