force-app/main/default/objects/OpportunityLineItem/fields/SAWO_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>SAWO_RejectionReason__c</fullName>
    <description>S4連携項目</description>
    <label>拒否理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z1</fullName>
                <label>Z1:キャンセル</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>00:Assigned by the System (Internal)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>