force-app/main/default/objects/OpportunityLineItem/fields/SAWO_RejectionReason_MTE__c.field-meta.xml
<CustomField>
    <fullName>SAWO_RejectionReason_MTE__c</fullName>
    <description>MTE用連携項目
STE用の拒否理由がZ1の場合20を設定する。

Cooperation items for MTE
Set 20 when the reason for STE rejection is Z1.</description>
    <formula>IF (  ISPICKVAL(SAWO_RejectionReason__c, &apos;Z1&apos;),&apos;20&apos;,&apos;&apos;)</formula>
    <label>拒否理由(MTE)</label>
    <type>Text</type>
</CustomField>