force-app/main/default/objects/OpportunityLineItem/fields/SAWO_S4LinkagePrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_S4LinkagePrice__c</fullName>
    <description>&quot;会計上の金額
直販：合計金額/総TC合計×総TC
海外商流：フロント仕入合計/総TC合計×総TC&quot;</description>
    <label>S/4連携金額</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>