force-app/main/default/objects/OpportunityLineItem/fields/SAWO_SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SalesPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>実際に販売する予定の単価</description>
    <label>販売単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>