force-app/main/default/objects/OpportunityLineItem/fields/SAWO_SalesRecordDate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SalesRecordDate__c</fullName>
    <label>売上計上日</label>
    <type>Date</type>
</CustomField>